# CryptoSmartTraderv2

./: .bandit  .env.example  .env.social_media_template  .env.template  .gitignore  .gitignore_new  .gitleaks.toml  .pre-commit-config.yaml  .replit  1_install_all_dependencies.bat  2_start_background_services.bat  3_start_dashboard.bat  AI_LLM_GOVERNANCE_HARDENING_REPORT.md  ANALYSIS_CONSOLIDATION_REPORT_2025-08-14T13-58-56.json  ANALYSIS_CONSOLIDATION_SUMMARY.md  API_INTEGRATION_STATUS.md  ARTIFICIAL_DATA_REMOVAL_REPORT.md  AUTHENTIC_DATA_SETUP.md  BACKTEST_LIVE_PARITY_COMPLETION_REPORT.md  BRANCH_PROTECTION_QUICK_GUIDE.md  BUILD_AND_CI_FIXES_REPORT.md  CENTRALIZED_OBSERVABILITY_COMPLETION_REPORT.md  CENTRALIZED_RISK_GUARD_COMPLETION_REPORT.md  CENTRALIZED_THROTTLING_ERROR_HANDLING_COMPLETION_REPORT.md  CHANGELOG.md  CI_CD_IMPLEMENTATION_COMPLETION_REPORT.md  CLEANUP_REPORT.md  CLEAN_ARCHITECTURE_REPORT.md  CODEOWNERS  COMPLETE_FUNCTIONALITY_VALIDATION.md  COMPLETE_WORKSTATION_CHECKLIST.md  COMPREHENSIVE_SECURITY_HARDENING_COMPLETION_REPORT.md  CONFIDENCE_GATE_DEBUG_RESULTS.md  CRITICAL_FIXES_IMPLEMENTATION.md  DATA_INGESTION_ROBUSTNESS_COMPLETION_REPORT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_VALIDATION_CHECKLIST.md  Dockerfile  EARLY_LISTING_DETECTION_FIX_REPORT.md  (+292 more)
technical_review/: CHANGELOG.md  TECHNICAL_REVIEW_README.md  pyproject.toml  replit.md  ruff.toml
technical_review/.github/: CODEOWNERS  dependabot.yml
technical_review/.github/workflows/: branch-protection.yml  ci.yml  release.yml  security.yml
technical_review/agents/: arbitrage_detector_agent.py  enhanced_backtest_agent.py  enhanced_ml_agent.py  enhanced_whale_agent.py  funding_rate_monitor.py  ml_predictor.py  ml_predictor_agent.py  news_speed_agent.py  sentiment_agent.py  technical_agent.py
technical_review/agents/scraping_core/: data_sources.py
technical_review/agents/sentiment/: model.py
technical_review/api/: health_endpoint.py  main.py
technical_review/api/routers/: __init__.py  data.py  health.py
technical_review/api/schemas/: __init__.py  health.py
technical_review/ml/: backtesting_engine.py  mc_dropout_inference.py  regime_adaptive_modeling.py  regime_detection_active.py  regime_features.py  temporal_integrity_validator.py  temporal_safe_splits.py  temporal_validator.py  time_series_validation.py
technical_review/ml/features/: __init__.py  auto_features.py  feature_engineering.py  feature_monitor.py
technical_review/ml/regime/: regime_aware_models.py  regime_router.py
technical_review/orchestration/: __init__.py
technical_review/src/cryptosmarttrader/: __init__.py  __main__.py  logging.py
technical_review/tests/: conftest.py  test_comprehensive_system.py  test_execution_policy.py  test_http_client.py  test_production_systems.py  test_temporal_validator.py
technical_review/utils/: atomic_io.py  authentic_opportunities.py  exchange_manager.py  gpu_optimizer.py  log_viewer.py  metrics.py  performance_optimizer.py  system_optimizer.py  timestamp_validator.py
technical_review_package/: 1_install_all_dependencies.bat  3_start_dashboard.bat  BACKTEST_LIVE_PARITY_COMPLETION_REPORT.md  CI_CD_IMPLEMENTATION_REPORT.md  CI_CD_MODERNIZATION_REPORT.md  CLEANUP_REPORT.md  DOCUMENTATION_INDEX.md  EXCEPTION_HANDLING_SECURITY_REPORT.md  EXECUTION_DISCIPLINE_REPORT.md  FASE_1_STATUS.md  FASE_2_IMPLEMENTATION_REPORT.md  FASE_B_STATUS.md  FASE_C_GUARDRAILS_COMPLETION_REPORT.md  FASE_C_IMPLEMENTATION_REPORT.md  FASE_D_PARITY_CANARY_IMPLEMENTATION_REPORT.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_SECURITY_AUDIT_REPORT.md  FINAL_SETUP_STATUS.md  GITHUB_ACTIONS_UPGRADE_REPORT.md  MANDATORY_GATEWAY_SECURITY_REPORT.md  OBSERVABILITY_CENTRALIZATION_REPORT.md  OBSERVABILITY_MIGRATION_REPORT.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READINESS_STATUS.md  QUICK_START_GUIDE.md  README.md  README_CONSOLIDATED.md  README_DOCKER.md  README_INSTALLATION.md  README_WORKSTATION_DEPLOYMENT.md  REPLIT_MULTI_SERVICE_CONFIG.md  REPLIT_RUN_CONFIGURATIONS.md  REPOSITORY_CLEANUP_REPORT.md  RETURN_ATTRIBUTION_COMPLETION_REPORT.md  SECURITY_AUDIT_REPORT.md  SUBPROCESS_SECURITY_HARDENING_REPORT.md  SYNTAX_ERROR_FIX_REPORT.md  SYSTEM_SETTINGS_REPORT.md  TECHNICAL_AGENT_REPORT.md  TECHNICAL_REVIEW_INDEX.md  (+45 more)
technical_review_package/core/: advanced_ai_engine.py  advanced_analytics.py  alpha_seeker.py  async_data_manager.py  authentic_data_collector.py  auto_disable_system.py  automated_feature_engineering.py  automl_engine.py  batch_inference_engine.py  black_swan_simulation_engine.py  cache_manager.py  completeness_gate.py  comprehensive_analyzer.py  config_manager.py  consolidated_logging_manager.py  continual_learning_engine.py  coverage_audit_system.py  cross_coin_fusion.py  crypto_ai_system.py  daily_health_dashboard.py  data_integrity_validator.py  data_manager.py  dependency_container.py  drift_detection.py  drift_fine_tune_integration.py  exception_handler.py  feature_discovery_engine.py  feature_fusion_engine.py  fine_tune_scheduler.py  functionality_auditor.py  http_client.py  import_path_resolver.py  improved_logging_manager.py  live_feature_adaptation.py  market_impact_engine.py  market_regime_detector.py  ml_ai_differentiators.py  ml_regime_router.py  ml_uncertainty_engine.py  mlflow_manager.py  (+24 more)
technical_review_package/ml/: __init__.py  continual_learning.py  event_impact_scoring.py  futures_data_features.py  futures_signals.py  meta_labeling.py  meta_labeling_active.py  model_registry.py  probability_calibration_enhanced.py  regime_features.py  regime_router.py  temporal_safe_splits.py  temporal_validator.py  time_series_validation.py  train_ensemble.py  uncertainty_active.py
technical_review_package/tests/: test_ensemble_meta_learner.py  test_fase_d_simple.py  test_guardrails_demo.py  test_production_pipeline.py  test_regime_simple.py  test_return_attribution.py  test_scraping_simple.py  test_system_optimizer.py  test_ta_agent.py
technical_review_package/trading/: orderbook_simulator.py  portfolio_optimization.py  realistic_backtester.py  realistic_execution.py
(+1656 files in other folders)
