[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptosmarttrader"
version = "2.0.0"
description = "Enterprise Cryptocurrency Trading Intelligence Platform"
authors = [{name = "CryptoSmartTrader Team"}]
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "fastapi>=0.100.0", 
    "uvicorn>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.5.0",
]

[tool.setuptools]
packages = ["src"]